SET( BLASINC  ${KNUT_SOURCE_DIR}/ATLAS/include )
SET( F2CINC ${KNUT_SOURCE_DIR}/libf2c )
INCLUDE_DIRECTORIES( ${BLASINC} ${F2CINC} )

ADD_LIBRARY( laarpack laarpack.c cblaswrap.h dlamch.c )
IF( CMAKE_COMPILER_IS_GNUCC )
    SET_SOURCE_FILES_PROPERTIES( dlamch.c PROPERTIES COMPILE_FLAGS -ffloat-store )
ENDIF( CMAKE_COMPILER_IS_GNUCC )
IF( MSVC )
    SET_SOURCE_FILES_PROPERTIES( dlamch.c PROPERTIES COMPILE_FLAGS /fp:precise )
ENDIF( MSVC )
