ADD_LIBRARY( pddef2c
	close.c   d_sqrt.c f2c.h     fmtlib.c   pow_dd.c sfe.c
	wref.c    d_cos.c  endfile.c f77_aloc.c fp.h     pow_di.c
	sig_die.c wrtfmt.c d_lg10.c  err.c      fio.h    i_dnnt.c
	s_cat.c   s_stop.c wsfe.c    d_log.c    etime_.c fmt.c
	i_len.c   s_cmp.c  sysdep1.h d_sign.c   exit_.c  fmt.h
	open.c    s_copy.c util.c )
